fix(): Home text section width doesnt overlap

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,7 +22,7 @@
 }
 
 .textSection {
-  width: 30%;
+  min-width: 30%;
   margin-left: var(--row-padding);
 }
 .teachingSection {
